--- a/scroll-indicator/index.html
+++ b/scroll-indicator/index.html
@@ -45,7 +45,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h2>My Scroll Indicator</h2>
+			<h2>Scrull</h2>
 			<div class="progress-container">
 				<div class="progress-bar" id="myBar"></div>
 			</div>
